syntax = "proto2";

option csharp_namespace = "Nethermind.Libp2p.Protocols.GossipSub.Dto";

message Rpc {
  repeated SubOpts subscriptions = 1;
  repeated Message publish = 2;
  optional ControlMessage control = 3;

  message SubOpts {
    optional bool subscribe = 1;
    optional string topicid = 2;
  }
}

message Message {
  optional bytes from = 1;
  optional bytes data = 2;
  optional bytes seqno = 3;
  required string topic = 4;
  optional bytes signature = 5;
  optional bytes key = 6;
}

message ControlMessage {
  repeated ControlIHave ihave = 1;
  repeated ControlIWant iwant = 2;
  repeated ControlGraft graft = 3; 
  repeated ControlPrune prune = 4;
}

message ControlIHave {
  optional string topicID = 1;
  repeated bytes messageIDs = 2;
}

message ControlIWant {
  repeated bytes messageIDs = 1;
}

message ControlGraft {
  optional string topicID = 1;
}

message ControlPrune {
  optional string topicID = 1;
}
